set(SOURCES
    lapi.c
    lapi.h
    lauxlib.c
    lauxlib.h
    lcode.c
    lcode.h
    ldebug.c
    ldebug.h
    ldo.c
    ldo.h
    ldump.c
    lfunc.c
    lfunc.h
    lgc.c
    lgc.h
    llex.c
    llex.h
    llimits.h
    lmem.c
    lmem.h
    lobject.c
    lobject.h
    lopcodes.c
    lopcodes.h
    lparser.c
    lparser.h
    lstate.c
    lstate.h
    lstring.c
    lstring.h
    ltable.c
    ltable.h
    ltm.c
    ltm.h
    lua.h
    luaclass.cpp
    luaclass.h
    luaconf.h
    lundump.c
    lundump.h
    lvm.c
    lvm.h
    lzio.c
    lzio.h
    )

add_library(lua_lib STATIC ${SOURCES})
